Concatenate leading words when the last parameter is string